wip adding tests, updating dependencies, working on making making new dependencies pass tasts

--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "!.git"
   ],
   "engines": {
-    "node": "^6.12.3",
-    "npm": "^5.6.0"
+    "node": "^16.4.2",
+    "npm": "^7.18.1"
   },
   "scripts": {
+    "test": "tape test/**/*.js",
     "start": "npm run develop",
     "develop": "grunt --force",
     "build": "grunt build",
@@ -32,54 +33,48 @@
   },
   "homepage": "https://github.com/risd/webhook-generate",
   "dependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.3.1",
+    "@babel/core": "^7.16.7",
+    "@babel/preset-env": "^7.16.8",
     "@risd/component-notification": "^1.0.11",
-    "@risd/react-hydrator": "^4.8.7",
-    "@risd/ui": "^15.6.4",
+    "@risd/react-hydrator": "^5.0.0",
+    "@risd/ui": "^16.0.0",
     "@risd/webhook-react-tag": "^3.0.1",
-    "MD5": "^1.3.0",
     "adm-zip": "^0.4.13",
     "async": "^0.2.10",
     "babelify": "^10.0.0",
     "cheerio": "^1.0.0-rc.2",
     "colors": "^0.6.2",
     "connect-header": "^0.0.5",
-    "firebase": "^5.8.2",
+    "firebase": "^9.6.3",
     "glob": "^7.1.3",
-    "grunt": "^0.4.5",
-    "grunt-autoprefixer": "^3.0.4",
-    "grunt-browserify": "^5.3.0",
-    "grunt-concurrent": "^0.4.3",
-    "grunt-connect-proxy": "^0.2",
+    "grunt": "^1.4.1",
+    "grunt-browserify": "^6.0.0",
+    "grunt-concurrent": "^3.0.0",
     "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-connect": "^0.9.0",
-    "grunt-contrib-cssmin": "^0.9.0",
-    "grunt-contrib-jshint": "^1.1.0",
-    "grunt-contrib-uglify": "~0.4.0",
-    "grunt-contrib-uglify-es": "^3.3.0",
+    "grunt-contrib-connect": "^3.0.0",
     "grunt-open": "^0.2.2",
+    "grunt-postcss": "^0.9.0",
     "grunt-rev": "^0.1.0",
-    "grunt-sass": "^2.1.0",
+    "grunt-sass": "^3.1.0",
     "grunt-simple-watch": "^0.1.2",
-    "grunt-usemin": "^2.6.2",
     "imagesloaded": "^3.1.8",
     "jquery": "^3.1.1",
     "jquery-bridget": "^2.0.1",
     "lodash": "^4.17.19",
     "marked": "^0.3.1",
+    "MD5": "^1.3.0",
     "mississippi": "^1.3.0",
     "mkdirp": "^0.3.5",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.23",
     "node-bourbon": "^4.2.3",
     "node-neat": "^1.7.2",
-    "node-sass": "^4.11.0",
     "nodejs-websocket": "^1.7.2",
     "packery": "^1.4.3",
     "picturefill": "^2.3.1",
     "proxy-middleware": "^0.5.0",
     "request": "^2.88.0",
+    "sass": "^1.48.0",
     "slugify": "^1.3.4",
     "smartquotes": "^1.0.0",
     "swig": "^1.4.2",
@@ -90,8 +85,10 @@
     "wrench": "^1.5.4"
   },
   "devDependencies": {
-    "grunt-cli": "^1.2.0",
-    "rm-webhook": "^2.0.5"
+    "autoprefixer": "^10.4.2",
+    "grunt-cli": "^1.4.3",
+    "rm-webhook": "^3.0.1",
+    "tape": "^5.4.1"
   },
   "risd.systems": {
     "generate": "2.5.7"
