--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
+    "debug": "^4.3.3",
     "grunt-cli": "^1.4.3",
     "rm-webhook": "^3.0.1",
     "tape": "^5.4.1"
