--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "colors": "^0.6.2",
     "connect-header": "^0.0.5",
     "firebase": "^9.6.3",
-    "glob": "^7.1.3",
+    "glob": "^7.2.0",
     "grunt": "^1.4.1",
     "grunt-browserify": "^6.0.0",
     "grunt-concurrent": "^3.0.0",
@@ -64,7 +64,7 @@
     "marked": "^0.3.1",
     "MD5": "^1.3.0",
     "mississippi": "^1.3.0",
-    "mkdirp": "^0.3.5",
+    "mkdirp": "^1.0.4",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.23",
     "node-bourbon": "^4.2.3",
@@ -81,12 +81,12 @@
     "tiny-lr": "^0.1.0",
     "touch": "^1.0.0",
     "uslug": "^1.0.3",
-    "win-spawn": "^2.0.0",
-    "wrench": "^1.5.4"
+    "win-spawn": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
     "debug": "^4.3.3",
+    "fs-extra": "^10.0.0",
     "grunt-cli": "^1.4.3",
     "rm-webhook": "^3.0.1",
     "tape": "^5.4.1"
