--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@babel/preset-env": "^7.16.8",
     "@risd/component-notification": "^1.0.11",
     "@risd/react-hydrator": "^5.0.0",
+    "@risd/swig": "^1.4.6",
     "@risd/ui": "^16.0.0",
     "@risd/webhook-react-tag": "^3.0.1",
     "adm-zip": "^0.4.13",
@@ -45,22 +46,18 @@
     "cheerio": "^1.0.0-rc.2",
     "colors": "^0.6.2",
     "connect-header": "^0.0.5",
-    "firebase": "^9.6.3",
     "glob": "^7.2.0",
     "grunt": "^1.4.1",
-    "grunt-browserify": "^6.0.0",
     "grunt-concurrent": "^3.0.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-connect": "^3.0.0",
     "grunt-open": "^0.2.2",
-    "grunt-postcss": "^0.9.0",
     "grunt-rev": "^0.1.0",
     "grunt-sass": "^3.1.0",
     "imagesloaded": "^3.1.8",
     "jquery": "^3.1.1",
     "jquery-bridget": "^2.0.1",
     "lodash": "^4.17.19",
-    "marked": "^0.3.1",
     "MD5": "^1.3.0",
     "mississippi": "^1.3.0",
     "mkdirp": "^1.0.4",
@@ -72,24 +69,27 @@
     "packery": "^1.4.3",
     "picturefill": "^2.3.1",
     "proxy-middleware": "^0.5.0",
-    "request": "^2.88.0",
     "sass": "^1.48.0",
     "slugify": "^1.3.4",
     "smartquotes": "^1.0.0",
-    "swig": "^1.4.2",
-    "tiny-lr": "^0.1.0",
     "touch": "^1.0.0",
     "uslug": "^1.0.3",
     "win-spawn": "^2.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^9.8.8",
+    "@lodder/grunt-postcss": "^3.1.1",
+    "autoprefixer": "^10.4.2",
     "debug": "^4.3.3",
+    "firebase": "^9.6.6",
     "fs-extra": "^10.0.0",
+    "grunt-browserify": "^6.0.0",
     "grunt-cli": "^1.4.3",
     "grunt-contrib-watch": "^1.1.0",
+    "marked": "^4.0.12",
+    "request": "^2.88.2",
     "rm-webhook": "^3.0.1",
-    "tape": "^5.4.1"
+    "tape": "^5.4.1",
+    "tiny-lr": "^2.0.0"
   },
   "risd.systems": {
     "generate": "2.5.7"
