--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
   "devDependencies": {
     "@lodder/grunt-postcss": "^3.1.1",
     "autoprefixer": "^10.4.2",
+    "axios": "^1.6.2",
     "debug": "^4.3.3",
     "firebase": "^9.6.6",
     "fs-extra": "^10.0.0",
@@ -86,7 +87,6 @@
     "grunt-cli": "^1.4.3",
     "grunt-contrib-watch": "^1.1.0",
     "marked": "^4.0.12",
-    "request": "^2.88.2",
     "rm-webhook": "^3.0.6",
     "tape": "^5.4.1",
     "tiny-lr": "^2.0.0"
